# SourceThunder_cmake

./: CMakeLists.txt  Thunder.sh
Source/: Attachment.cpp  Attachment.h  Authentification.cpp  Authentification.h  BusinessManager.h  Camera.cpp  Camera.h  Constructor.cpp  Constructor.h  Crash.cpp  Crash.h  CrossMapping.cpp  CrossMapping.h  Databases.cpp  Databases.h  Discord.cpp  EntityManagement.cpp  EntityManagement.h  ExePath.cpp  ExePath.h  Features.cpp  Features.h  FileLogger.cpp  FileLogger.h  FileManagement.cpp  FileManagement.h  Functions.cpp  Functions.h  GETHASHKEY.cpp  GETHASHKEY.h  GTAProp.cpp  GTAProp.h  GTAVehicle.cpp  GTAVehicle.h  GTAblip.cpp  GTAblip.h  GTAentity.cpp  GTAentity.h  GTAmath.cpp  GTAmath.h  (+129 more)
Source/Auth/Networking/: RegExp.h  Web2.0.h
Source/MinHook/include/: MinHook.h
Source/MinHook/lib/: libMinHook.x64.lib  libMinHook.x64d.lib
Source/MinHook/lib/Release/: libMinHook.x64.lib
Source/MinHook/lib/olds-/: libMinHook.x64.lib  libMinHook.x64d.lib
Source/mapeditor/: Expanded ObjectList.ini  PedList.ini  VehicleList.ini
Source/nlohmann/: json.hpp  lua.7z  string_operations.hpp
Source/reclass/: oldsclass.7z
Source/reclass/GTAV-Classes/: .gitignore  CMakeLists.txt  LICENSE  README.md  classes.cpp  gtav.rcnet
Source/reclass/GTAV-Classes/.devcontainer/: Dockerfile  devcontainer.json
Source/reclass/GTAV-Classes/base/: CBaseModelInfo.hpp  CNavigation.hpp  CObject.hpp  HashTable.hpp  atRTTI.hpp  datBase.hpp  fwArchetype.hpp  fwArchetypeDef.hpp  fwExtensibleBase.hpp  fwExtension.hpp  fwExtensionContainer.hpp  fwRefAwareBase.hpp  fwRefAwareBaseImpl.hpp  pgBase.hpp  phArchetype.hpp  phBound.hpp  phBoundCapsule.hpp  phBoundComposite.hpp
Source/reclass/GTAV-Classes/camera/: CCameraAngles.hpp  CCameraManagerAngles.hpp  CGameCameraAngles.hpp
Source/reclass/GTAV-Classes/draw_handlers/: CEntityDrawHandler.hpp  CObjectDrawHandler.hpp  CPedDrawHandler.hpp  CVehicleDrawHandler.hpp  fwDrawData.hpp
Source/reclass/GTAV-Classes/entities/: CAttackers.hpp  CDynamicEntity.hpp  CEntity.hpp  CPhysical.hpp  fwEntity.hpp
Source/reclass/GTAV-Classes/enums/: eExplosionTag.hpp  eHandlingType.hpp
Source/reclass/GTAV-Classes/misc/: CTunables.hpp
Source/reclass/GTAV-Classes/netsync/: CProjectBaseSyncDataNode.hpp  CProjectSyncTree.hpp  NodeCommonDataOperations.hpp  netSyncDataNode.hpp  netSyncNodeBase.hpp  netSyncParentNode.hpp  netSyncTree.hpp
info/: cmake-copyright.txt  made-with-cmake-3.31.9-windows-x86_64.txt
(+152 files in other folders)
